fix: adding functionality to handle data types
